--- a/p8105_fp_ds100_Report.Rmd
+++ b/p8105_fp_ds100_Report.Rmd
@@ -15,21 +15,21 @@ library(patchwork)
 
 Suicide is a leading cause of death in the US. Suicide rates increased in nearly every state from 1999 through 2016. Mental health conditions are often seen as the cause of suicide, but suicide is rarely caused by any single factor. In fact, many people who died by suicide are not known to have a diagnosed mental health condition at the time of death. We are interested in examining the variations of suicide death rates among different categorical variables such as gender, race, age group, and to test if the observed differences are statistically significant based on the analysis of suicide death rates and related confidence intervals.
 
+# Related work
 
-# Related work:
 Suicide has ranked as the 10th leading cause of death among Americans for many years. 
-Here is the link for report that inspired us. https://afsp.org/about-suicide/suicide-statistics/ 
+Here is the link for a report that inspired us. https://afsp.org/about-suicide/suicide-statistics/ 
 This report summarizes the suicide rates by race and age. In addition, they also include the most common suicide methods and data for suicide attempts.
 
-# Initial questions:
+# Initial questions 
 
-The initial thought of this project is to discover the relationship between suicide and people's mental status. We have found two separated datasets,one of them is the Injury Mortality data in the U.S., the other contains people's depression status in the US. Since both datasets include information for age, race, and gender, we decided to compare the trend of suicide death rates with depression prevalence under these three categories.
+The initial thought of this project is to discover the relationship between suicide and people's mental status. We have found two separated datasets, one of them is the Injury Mortality data in the U.S., the other contains people's depression status in the US. Since both datasets include information for age, race, and gender, we decided to compare the trend of suicide death rates with depression prevalence under these three categories.
 
-# Data:
+# Data
 
 ## BRFSS Prevalence Data (2011 to present)
 
-Data from the Behavioral Risk Factor Surveillance System (BRFSS) Prevalence Data (2011 to present) were accessed from cdc.gov.(https://chronicdata.cdc.gov/Behavioral-Risk-Factors/Behavioral-Risk-Factor-Surveillance-System-BRFSS-P/dttw-5yxu) The version of the data that we will use in this analysis can be found in our Github (./data).
+Data from the Behavioral Risk Factor Surveillance System (BRFSS) Prevalence Data (2011 to present) were accessed from cdc.gov.(https://chronicdata.cdc.gov/Behavioral-Risk-Factors/Behavioral-Risk-Factor-Surveillance-System-BRFSS-P/dttw-5yxu) The version of the data that we will use in this analysis can be found in our Github.
 
 Methodology: http://www.cdc.gov/brfss/factsheets/pdf/DBS_BRFSS_survey.pdf 
 
@@ -94,12 +94,12 @@ injury_tidy = injury_data %>%
                 # filtering only data from 2011-2016 for further comparison analysis with another dataset.
 ```
 
-The original dataset contains 98280 rows and 17 columns.  For further use, we make a preliminary dataset. The preliminary dataset contains 216 rows and 7 columns. Each row includes the information of the mortality rate for specific age,sex,gender group who attempted suicide during specific year. 
+The original dataset contains 98280 rows and 17 columns.  For further use, we make a preliminary dataset. The preliminary dataset contains 216 rows and 7 columns. Each row includes the information of the mortality rate for a specific age, sex, gender group who attempted suicide during a specific year. 
 
 # Exploratory analysis:
 
-Creat a new data from the original data just for this section, so that it won't affect other part of the analysis: 
-For BRFSS dataset, select some variables (year, locationabbr, locationdesc, response, sample_size, age_group, gender, race_ethnicity) that might be usful for later analysis.
+Create a new data from the original data just for this section, so that it won't affect other parts of the analysis: 
+For BRFSS dataset, select some variables (year, locationabbr, locationdesc, response, sample_size, age_group, gender, race_ethnicity) that might be useful for later analysis.
 
 ```{r tidy_data_BRFSS}
 data_BRFSS_JZ = brfss_data %>% 
@@ -107,7 +107,7 @@ data_BRFSS_JZ = brfss_data %>%
   select(., year, locationabbr, locationdesc, response, sample_size, age_group, gender, race_ethnicity)
 ```
 
-For the Injury Mortality dataset, we filter out 'Suicide' as our focus and get rid of summarized rows for age, sex and race. Since the cases and total population do not differ by 'injury_mechanism', here we use 'All Mechanisms' to prevend over counting for the population. 
+For the Injury Mortality dataset, we filter out 'Suicide' as our focus and get rid of summarized rows for age, sex, and race. Since the cases and total population do not differ by 'injury_mechanism', here we use 'All Mechanisms' to prevent over counting for the population. 
 
 ```{r tidy_data_IM}
 data_IM_JZ = injury_data %>% 
@@ -167,10 +167,10 @@ data_IM_JZ %>%
 BRFSS_age_plot + IM_age_plot
 ```
 
-First thing we did is to combine ages to make the two dataset compariable. One defect of this analysis is that the BRFSS data only includes 18-24 age group compared to '< 25' age group in the mortality dataset. If we just look at the other three age groups, for people from 25-64, high prevalence of depression seems to be consistent with suicide death rate. However, regardless of age group '65+' having a relative low depression prevalence, their suicide rate remains relatively high. \
+The first thing we did is to combine ages to make the two dataset comparable. One defect of this analysis is that the BRFSS data only includes 18-24 age group compared to '< 25' age group in the mortality dataset. If we just look at the other three age groups, for people from 25-64, a high prevalence of depression seems to be consistent with the death rate. However, regardless of the age group '65+' having a relative low depression prevalence, their suicide rate remains relatively high. \
 When using the 'str_replace' function for '75+', the result kept giving me an extra '+' at the end of the string. So I set '65+' for the '45–64' group so that they can combine to become the '65+' group. \
-For both Prevalence and Death Rate, 5% CI were calculated. Usually large CI stands for a relatively small sample size. \
-Another thing worth noticing is that in the raw dataset, the '–' in between '45–64' is not the usual '-' in the keyboard,thus I had to copy and paste the symbol to my code. 
+For both Prevalence and Death Rate, 5% CI were calculated. Usually, large CI stands for a relatively small sample size. \
+Another thing worth noticing is that in the raw dataset, the '–' in between '45–64' is not the usual '-' in the keyboard, thus I had to copy and paste the symbol to my code. 
 
 ## Exploring by 'Race':
 
@@ -255,7 +255,7 @@ data_IM_JZ %>%
 BRFSS_gender_plot + IM_gender_plot
 ```
 
-Although female have higher depression prevalence, their suicide rate is much lower than that of male. Could this give a hint that women are more endurable to depression? We do some researches and find out that women are more likely than men to report suicidal ideation and attempts and to be hospitalized for suicide attempts whereas male tend to choose more lethal method to commit suicide than female (Vijayakumar,2015).
+Although female have higher depression prevalence, their suicide rate is much lower than that of the male. Could this give a hint that women are more endurable to depression? We do some researches and find out that women are more likely than men to report suicidal ideation and attempts and to be hospitalized for suicide attempts whereas male tends to choose more lethal methods to commit suicide than female (Vijayakumar,2015).
 
 ## Regression Model Analysis
 To maintain comparability between injury mechanism and depression(brfss) data, we only generate statistic results for:  
@@ -282,6 +282,7 @@ To maintain comparability between injury mechanism and depression(brfss) data, w
     + 2016
 
 ```{r convert_var}
+# tidy and factorize injury data
 new_injury = 
   injury_data %>% 
   filter(injury_mechanism == "All Mechanisms",
@@ -300,13 +301,13 @@ new_injury =
          race = as.factor(race),
          age_group_years = as.factor(age_group_years),
          year = as.factor(year))
-  
 ```
 
 ### Suicide rate model
 ```{r lm}
+# fit suicide model
 fit_suicide = lm(suicide_dr ~ sex + race + age_group_years + year, data = new_injury)
-
+# summary the suicide model
 summary(fit_suicide) %>% 
   broom::tidy() %>% 
   select(term, estimate, p.value) %>%
@@ -325,26 +326,26 @@ Then, we construct regression for suicide death rate as response, sex, race, age
 
 __Suicide Death Rate = 7.84 - 12.565 I{sex = female} - 0.912 I{race = Non-Hispanic black} + 10.313 I{race = Non-Hispanic white} + 7.745 I{25 < age < 44} + 7.531 I{45 < age < 64} + 6.362 I{age >= 65} + 0.212 I{year = 2012} + 0.215 I{year = 2013} + 0.707 I{year = 2014} + 0.778 I{year = 2015} + 1.05 I{year = 2016}__
   
-1. Sex has **significant** p-value < 0.0001: There is significant difference of suicide rate between male and female group and female tends to have lower suicide death rate.   
-2. Race of Non-Hispanic white has **significant** p-value: There is significant difference of suicide rate between Non-hispanic Whites and Hispanic and Non-hispanic Black have non-significant difference with Hispanic. Whites tend to have higher suicide death rate compared to Hispanic and Blacks.   
-3. All groups of age(in years) have **significant** p-value: There is significant difference between all age groups with baseline age group(age < 25).    
-4. All years have **non-significant** p-value: There is not significant difference between all years with year 2011.   
-5. The model produced an adjusted $R^2$ = 0.6405, which represents there are 64% of the variability of the suicide rate are explained by the fitted model and data after adjusted and it's a acceptable proportion for the model.
+1. Sex has **significant** p-value < 0.0001: There is a significant difference in suicide rate between the male and female group and female tends to have lower suicide death rate.   
+2. Race of Non-Hispanic white has **significant** p-value: There is a significant difference of suicide rate between Non-Hispanic Whites and Hispanic and Non-Hispanic Black has a non-significant difference with Hispanic. Whites tend to have higher suicide death rate compared to Hispanic and Blacks.   
+3. All groups of age(in years) have **significant** p-value: There is a significant difference between all age groups with baseline age group(age < 25).    
+4. All years have **non-significant** p-value: There is not a significant difference between all years with year 2011.   
+5. The model produced an adjusted $R^2$ = 0.6405, which represents there are 64% of the variability of the suicide rate are explained by the fitted model and data after adjusted and it's an acceptable proportion for the model.
  
 #### Pairwise comparison
-```{r}
+```{r pairwise suicide}
 fit_suicide %>% aov(.) %>%  TukeyHSD()
 ```
 
-Then, we make pairwise comparison with Bonferroni and Tukey for race, age and year groups. Findings:      
-1.  __Race__: Non-Hispanic White and Hispanic, Non-Hispanic White and Black have significant different suicide death rate. White have the highest suicide death rate among 3 race groups. And Blacks have lower suicide death rate compared to Hispanic and Whites.  
+Then, we make a pairwise comparison with Bonferroni and Tukey for race, age and year groups. Findings:      
+1.  __Race__: Non-Hispanic White and Hispanic, Non-Hispanic White and Black have significant different suicide death rate. The white has the highest suicide death rate among 3 race groups. And Blacks have lower suicide death rate compared to Hispanic and Whites.  
 2.  __Age__: 25-44 and <25, 45-64 and <25, 65+ and <25 have significant different suicide death rate. Age groups that are >25 all have higher suicide death rate compared to age <25. And age 65+ have lower suicide death rate compared to 25-44, 45-64 groups.    
-3. __Year__: All pairwise comparison for years don't generate significant result, meaning there is no significant different suicide death rate in different years.
+3. __Year__: All pairwise comparison for years don't generate a significant result, meaning there is no significant different suicide death rate in different years.
 
 ### Depression model
 #### Age model
-```{r}
-
+```{r brfss age}
+# tidy brfss for age
 new_brfss_age =
   brfss_data %>% 
   filter(response == "Yes",
@@ -357,7 +358,7 @@ new_brfss_age =
          age_group = str_replace(age_group,"55-64", "45-64")) %>% 
   select(data_value, age_group) %>% 
   mutate(age_group = as.factor(age_group))
-
+# fit age model
 fit_age = lm(data_value ~ age_group, data = new_brfss_age)
 summary(fit_age) %>% 
   broom::tidy() %>% 
@@ -368,10 +369,9 @@ summary(fit_age) %>%
 ```
 
 ##### Pairwise comparison  
-```{r}
+```{r pairwise age model}
 fit_age %>% aov(.) %>% TukeyHSD()
 ```
-
 
 #### Model Analysis
 Because of the data structure of brfss data, the age, gender, race are independent characteristics of the participants to the study, we have to build 3 seperate model for independent analysis. And the data_value(in %) represents the proportion of people have depression.
@@ -388,7 +388,8 @@ __Depression Rate = 16.486 + 2.31 I{25 < age < 44} + 4.528 I{45 < age < 64} - 2.
 
 #### Gender model
 
-```{r}
+```{r brfss gender}
+# tidy brfss for gender
 new_brfss_gender =
   brfss_data %>% 
   filter(year %in% c(2011, 2012, 2013, 2014, 2015, 2016),
@@ -398,7 +399,7 @@ new_brfss_gender =
   mutate(total_sp = sample_size/(data_value/100)) %>% 
   select(data_value, gender) %>% 
   mutate(gender = as.factor(ifelse(gender == "Male", 0, 1)))
-
+# fit gender model
 fit_gender = lm(data_value ~ gender, data = new_brfss_gender)
 summary(fit_gender) %>% 
   broom::tidy() %>% 
@@ -406,22 +407,22 @@ summary(fit_gender) %>%
   mutate(term = str_replace(term, "^gender", "gender: "),
          p.value = ifelse(p.value < 0.001, '< 0.001', round(p.value, digits = 3)))%>% 
   knitr::kable(align = c("l", "r", "r"))
-
+# pairwise gender
 fit_gender %>% aov(.) %>% TukeyHSD()
 ```
 
 #### Model Analysis
 **Gender Model**:  
 __Depression Rate = 13.66 + 9.028 I{gender = female}__
-  
+
 1.  There is significant difference in the depression propotion between male and female. And female indicates a higher depression proportion than male.  
 2.  The adjusted $R^2$ = 0.6146 indicates that 
 61.46% of variability of the depression proportion is explained by the model only includes gender as predictor.
 
-
 #### Race model
 
-```{r}
+```{r brfss race}
+# tidy brfss by race
 new_brfss_race =
   brfss_data %>% 
   filter(year %in% c(2011, 2012, 2013, 2014, 2015, 2016),
@@ -431,7 +432,7 @@ new_brfss_race =
   select(data_value, race_ethnicity) %>% 
   mutate(race_ethnicity = as.factor(race_ethnicity),
          race_ethnicity = fct_relevel(race_ethnicity, race_ethnicity = c("Hispanic", "Black, non-Hispanic", "White, non-Hispanic")))
-
+# fit race model
 fit_race = lm(data_value ~ race_ethnicity, data = new_brfss_race)
 summary(fit_race) %>% 
   broom::tidy() %>% 
@@ -439,9 +440,8 @@ summary(fit_race) %>%
   mutate(term = str_replace(term, "^race_ethnicity", "race: "),
          p.value = ifelse(p.value < 0.001, '< 0.001', round(p.value, digits = 3)))%>% 
   knitr::kable(align = c("l", "r", "r"))
-
+# pairwise race 
 fit_race %>% aov(.) %>% TukeyHSD()
-
 ```
 
 
@@ -449,49 +449,43 @@ fit_race %>% aov(.) %>% TukeyHSD()
 **Race Model**:   
 __Depression Rate = 17.511 - 1.716 I{race = Black, non-Hispanic} + 1.901 I{race = White, non-Hispanic}__  
     
-1.  There is significant difference in the depression propotion among Hispantic and Non-Hispanic Black, Hispantic and Non-Hispanic White.   
+1.  There is a significant difference in the depression proportion among Hispanic and Non-Hispanic Black, Hispanic and Non-Hispanic White.   
 2.  All pairwise comparison showed a significant p-value between each race groups while Whites have higher depression proportion than Hispanics and Blacks and Blacks have lower depression proportion than Hispanics.   
 3.  The adjusted $R^2$ = 0.1081 indicates that 
-10.81% of variability of the depression proportion is explained by the model only includes race groups as predictor.
-
+10.81% of the variability of the depression proportion is explained by the model only includes race groups as the predictor.
 
 ### Additional Analysis for Location
 
-```{r}
-brfss<-read.csv("./data/brfss_data.csv")
-
-location_depression<-brfss %>% 
-  dplyr::select(year,locationabbr,locationdesc,response,sample_size,data_value,confidence_limit_low,confidence_limit_high,break_out_category_id,breakout_id,Gender) %>%
-  filter(break_out_category_id=="CAT2",response=="Yes") %>% 
-mutate(total_sample_size=ceiling(sample_size/(data_value/100))) %>% 
-  rename(depress_num=sample_size,depress_rate= data_value) %>% 
+```{r location analysis}
+# tidy data for location
+location_depression = brfss_data %>%
+  dplyr::select(year, locationabbr, locationdesc, response, sample_size, data_value, confidence_limit_low, confidence_limit_high, break_out_category_id, breakout_id, gender) %>%
+  filter(break_out_category_id == "CAT2", response == "Yes") %>%
+  mutate(total_sample_size = ceiling(sample_size/(data_value/100))) %>% 
+  rename(depress_num = sample_size, depress_rate = data_value) %>% 
   group_by(locationabbr) %>% 
-  summarize(total_dep=sum(depress_num,na.rm=T),total_sam=sum(total_sample_size,na.rm=T))
-
-location_depression=location_depression %>% 
+  summarize(total_dep = sum(depress_num,na.rm = T),total_sam = sum(total_sample_size,na.rm = T)) %>% 
   mutate(depression_rate=total_dep/total_sam)
-
+# plot location
 location_depression %>% 
-  ggplot(aes(x=locationabbr,y=depression_rate,color=locationabbr))+
-  labs(title="Drepression Rate in Different States")+
-  geom_col()+
+  ggplot(aes(x = locationabbr,y = depression_rate,color = locationabbr)) +
+  labs(title = "Drepression Rate in Different States") +
+  geom_col() +
   theme(axis.text.x = element_text(angle = 45,size = 6.5),legend.position = "none")
-
-
 ```
 
-In addition to investigating the trend of depression prevalence under the category of *"Age"*, *"Race"*, and *"Gender"*, we are also interested in examining if there is a difference in depression proportion across states of the U.S. Based on the graph, a remarkable finding is that Virgin Islands has the lowest proportion of depression compared to other locations and the difference is quite significant. According to our research, the state ethinicity group consists of over 70% Black race(https://en.wikipedia.org/wiki/United_States_Virgin_Islands), and linking back to our visualizations and regression model results, they are consistent with each other since Blacks tend to have the lowest depression prevalence relative the others race groups included in our analysis.
+In addition to investigating the trend of depression prevalence under the category of *"Age"*, *"Race"*, and *"Gender"*, we are also interested in examining if there is a difference in depression proportion across states of the U.S. Based on the graph, a remarkable finding is that the Virgin Islands has the lowest proportion of depression compared to other locations and the difference is quite significant. According to our research, the state ethnicity group consists of over 70% Black race(https://en.wikipedia.org/wiki/United_States_Virgin_Islands), and linking back to our visualizations and regression model results, they are consistent with each other since Blacks tend to have the lowest depression prevalence relative the others race groups included in our analysis.
 
 # Discussion
 
-From 2011 through 2016, the general trend for depression prevalence in US increases from 2011 to 2013, then decreases there after. While on the other hand, suicide death rate appears to be increasing each year. Even if we know that depression is just one causal factor for suicide, we expected to see similar trend for the three groups (age, race, gender).
+From 2011 through 2016, the general trend for depression prevalence in the US increases from 2011 to 2013, then decreases thereafter. While on the other hand, the suicide death rate appears to be increasing each year. Even if we know that depression is just one causal factor for suicide, we expected to see a similar trend for the three groups (age, race, gender).
  
-People older than 65 have relatively low prevalence of depression but high suicide rate. On the contray,Black people have both low depression prevalence and low suicide rate. White people have high depression prevalence and high suicide rate . Women are reported to have higher prevalence of depression compared to men, while keep a relatively low death rate of suicide rate. Any apparent difference of trend on the two plot might suggest other causal factors in the 'causal pies'. 
+People older than 65 have a relatively low prevalence of depression but a high suicide rate. On the contrary, Black people have both low depression prevalence and low suicide rate. White people have high depression prevalence and high suicide rate. Compared to men, women are reported to have a higher prevalence of depression while keeping a relatively low death rate of the suicide rate. Any apparent difference of trend on the two plot might suggest other causal factors in the 'causal pies'. 
 
-Our results obtained from the regression models agree mostly with the patterns found in the visualization plots by looking at the estimated coefficients for each model parameter and comparing their magnitude and signs with the reference factor level. However, by looking at the fitted regression for suicide death rate, it can be observed that the term 'year' is not a significant predictor and thus should be removed from the model. This means that although suicide death rates appears to be gradually increasing from 2011 to 2016, there is not enough statistical evidence to show that the change is significant. Overall, we recommend the final model to be **Suicide Death Rate ~ Age + Race + Gender**
+Our results obtained from the regression models agree mostly with the patterns found in the visualization plots by looking at the estimated coefficients for each model parameter and comparing their magnitude and signs with the reference factor level. However, by looking at the fitted regression for suicide death rate, it can be observed that the term 'year' is not a significant predictor and thus should be removed from the model. This means that although suicide death rates appear to be gradually increasing from 2011 to 2016, there is not enough statistical evidence to show that the change is significant. Overall, we recommend the final model to be **Suicide Death Rate ~ Age + Race + Gender**
 
-```{r}
-
+```{r final suicide model}
+# fit the final model
 fit_suicide_final = lm(suicide_dr ~ sex + race + age_group_years, data = new_injury)
 summary(fit_suicide_final) %>%
   broom::tidy() %>% 
@@ -500,15 +494,14 @@ summary(fit_suicide_final) %>%
          term = str_replace(term, "^race", "race: "),
          term = str_replace(term, "^age_group_years", "age group: "),
          p.value = ifelse(p.value < 0.001, '< 0.001', round(p.value, digits = 3))) %>% 
-  knitr::kable(align = c("l", "r", "r"))
-  
+  knitr::kable(align = c("l", "r", "r")) # show the coef table
 ```
 
 __Suicide Death Rate = 8.334 - 12.565 I{sex = female} - 0.912 I{race = Non-Hispanic black} + 10.313 I{race = Non-Hispanic white} + 7.475 I{25 < age < 44} + 7.531 I{45 < age < 64} + 6.362 I{age >= 65}__
 
-On the other hand, for the simple linear regressions to predict depression prevalence, *"Age"*, *"Race"*, and *"Gender"* are all significant covariates. This supports our initial hypothesis that suicide death rate and depression prevalence do vary among these proposed factors. However, the direct association between depression and suicide may be difficult to test. For rare cases like suicide, case-control study should be a suitable way to conduct the research by carefully selecting the cases and controls and examining their odds ratio of being exposed to depression. The challenge is that psychological status such as depression is hardly detected accurately, and people may not be willing to report authentic information which potentially leads to bias when analyzing the results. Generally speaking, our project was successful in exploring the relationship between suicide death rate and depresion prevalence among *"Age"*, *"Race"*, and *"Gender"*.
+On the other hand, for the simple linear regressions to predict depression prevalence, *"Age"*, *"Race"*, and *"Gender"* are all significant covariates. This supports our initial hypothesis that suicide death rate and depression prevalence do vary among these proposed factors. However, the direct association between depression and suicide may be difficult to test. For rare cases like suicide, a case-control study should be a suitable way to conduct the research by carefully selecting the cases and controls and examining their odds ratio of being exposed to depression. The challenge is that psychological status such as depression is hardly detected accurately, and people may not be willing to report authentic information which potentially leads to bias when analyzing the results. Generally speaking, our project was successful in exploring the relationship between suicide death rate and depression prevalence among *"Age"*, *"Race"*, and *"Gender"*.
 
-#Reference
+# Reference
 [1] American Foundation for Suicide Prevention (2018). Suicide Statistics Retrieved from https://afsp.org/about-suicide/suicide-statistics/
 
 [2] Vijayakumar L. (2015). Suicide in women. Indian journal of psychiatry, 57(Suppl 2), S233-8.
